--- a/action.yaml
+++ b/action.yaml
@@ -35,6 +35,9 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
     - name: Set up JDK 17 for deploy to OSSRH
       uses: actions/setup-java@v2
       with:
