--- a/action.yaml
+++ b/action.yaml
@@ -34,6 +34,11 @@ inputs:
 
 runs:
   using: "composite"
+
+  permissions:
+    contents: read
+    packages: write
+
   steps:
     - name: Checkout
       uses: actions/checkout@v3
