--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -6,6 +6,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
       - name: Maven Library build and publish
         uses: ./
         with:
