--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     "image": "mcr.microsoft.com/devcontainers/universal:2",
     "features": {
-      "ghcr.io/dhoeric/features/act:1": {}
+	"ghcr.io/dhoeric/features/act:1": {},
     },
     "customizations": {
       "vscode": {
