--- a/action.yaml
+++ b/action.yaml
@@ -45,10 +45,10 @@ runs:
         distribution: "adopt"
         java-version: ${{ inputs.java-version }}
         server-id: ossrh
-        server-username: ${{ inputs.nexus-username }}
-        server-password: ${{ inputs.nexus-password }}
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
         gpg-private-key: ${{ inputs.gpg-private-key }}
-        gpg-passphrase: ${{ inputs.gpg-passphrase }}
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
@@ -69,6 +69,7 @@ runs:
       env:
         MAVEN_USERNAME: ${{ inputs.nexus-username }}
         MAVEN_CENTRAL_TOKEN: ${{ inputs.nexus-password }}
+        MAVEN_PASSWORD: ${{ inputs.nexus-password }}
         MAVEN_GPG_PASSPHRASE: ${{ inputs.gpg-passphrase }}
 
     - name: Set up JDK 17 for deploy to github packages
